syntax ="proto3";
package msg;

///登陆请求
//@msg
message C2S_Login{
    ///微信登陆时是微信uid,游客登陆时是手机唯一标识
    string uid=1;
    ///用户昵称
    string nickname=2;
    ///用户头像url
    string head=3;
    ///性别
    string sex = 4;
    //微信登陆传openid，游客登陆传空
    string password=5;
    ///地理位置
    string location = 6;
    ///登陆类型
    enum E_LoginType {
        //微信登陆
        E_LoginType_WeChat=0;
        //游客登陆
        E_LoginType_Guest=1;
    }
    E_LoginType logintype = 7;
}

///登陆回复
//@msg
message S2C_Login{
    enum E_ErrReason {
        //成功登陆,将下发数据
        E_Err_SucceeLogin=0;
        //成功创建新账号,读表获取初始数据
        E_Err_NewAccount=1;
        //登陆信息不匹配,登陆失败
        E_Err_LoginInfoNotMatch=2;
        //验证通过,允许登陆,但登陆地点异常警告
        E_Err_LocationWarn = 3;
    }
    E_ErrReason reason=1;
}

///玩家公开信息
//@msg
message Player{
    ///玩家id
    int32 id=1;
    ///昵称
    string nickname=2;
    ///头像
    string head=3;
    ///金币
    int32 money=4;
    ///等级
    int32 grade=5;
    ///积分
    int64 interial=6;
}

///服务端大厅广播
//@msg
message S2C_HallBroadCast{
    

}
///客户端向服务器发送用户信息请求
//@msg
message C2S_Userinfo{
}
///服务端个人信息返回
//@msg
message S2C_Userinfo{
    UserModel userinfo=1;
}
//@msg
message UserModel{
    ///公共信息
    Player playerinfo=1;
    ///局数
    int64 jushu=2;
    ///入场率     
    int32 rujurate=3; 
    ///胜率 
    int32 shenglurate=4;
    ///摊派率
    int32 tanpairate=5;
    ///最大牌型idlist
    repeated string ids=6;
}

///客户端向服务端发送商品列表请求
//@msg
message C2S_MallProduct { //空包
	
}
///服务端向客户端发送商品列表
//@msg
message S2C_MallProduct {
	repeated MallProductModel products = 1; //商品列表
}
//@msg
message MallProductModel {
   ///商品id
   string id = 1; 
   ///商品名称   
   string name = 2 ; 
   ///商品图片
   string image = 3; 
   enum E_Shoptype {
        coin=0;
        diamond=1;
    }
    E_Shoptype shoptype = 4;
   ///价格
   int32 price = 5 ;
   ///道具数量 
   int32 itemcount = 6; 
}
///客户端向服务端发送签到请求
//@msg
message C2S_Qiandao{ //空包
    
}
///服务器向客户端发送签到列表
//@msg
message S2C_QiandaoBrocast {
	repeated QiandaoModel products = 1; //签到列表
}
//@msg
message QiandaoModel {
   ///签到id
   string id = 1; 
   ///签到名称   
   string name = 2 ; 
   ///签到图片
   string image = 3; 
    enum E_Qiandaotype {
        coin=0;
        diamond=1;
    }
    E_Qiandaotype qiandaotype = 4;
    ///奖励数量
   int32 awardnum = 5 ;
   ///领取状态
   bool status=6; 
}
///客户端向服务器发送任务信息请求
//@msg
message C2S_TaskList{ 
	
}
//@msg
message S2C_TaskList{
    ///任务列表
	repeated TaskModel products = 1; 
}
//@msg
message TaskModel {
   ///任务id
   string id = 1; 
   ///任务名称 
   string name = 2; 
   ///任务图片，直接传图片名字 
   string image = 3; 
   ///任务类型 0挑战任务1今日任务2本周任务3成就任务
   enum E_Tasktype {
        challenge=0;
        day=1;
        week=2;
        achievement=3;
    }
    E_Tasktype tasktype = 4;

   ///任务描述
   string description=5;
   ///奖励数量
   int32 awardnum =7; 
   ///任务完成次数
   int32 finish=8;
   ///任务总次数
   int32 zong=9;
}
//@msg
message C2S_MailList{
	
}
//@msg
message S2C_MailList{
    ///邮件列表
	repeated MailModel products = 1; 
}
//@msg
message MailModel {
   ///邮件id
   string id = 1;
   ///邮件图片 
   string image = 2; 
   ///邮件类型0正常邮件1系统邮件
    enum E_Mailtype {
        normalmail=0;
        systemmial=1;
    }

    E_Mailtype mailtype = 3;
    ///金币0，钻石1，物品2
    enum E_Awardtype {
        coin=0;
        diamond=1;
        goods=2;
    }
    E_Awardtype awardtype = 4;
   ///邮件描述 
   string description=5;
   ///邮件时间
   string time=6;
}